--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/config": "^0.0.38",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^15.0.1",
     "@types/supertest": "^2.0.11",
@@ -52,6 +53,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.7"
   }
